--- a/2D-Implementation/2D-Implementation/2D-Implementation.csproj
+++ b/2D-Implementation/2D-Implementation/2D-Implementation.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>_2D_Implementation</RootNamespace>
+    <RootNamespace>PSDSystem</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
