--- a/Godot Projects/game1/.gitignore
+++ b/Godot Projects/game1/.gitignore
@@ -6,6 +6,9 @@
 export.cfg
 export_presets.cfg
 
+# Godot Addons
+addons/
+
 # Imported translations (automatically generated from CSV files)
 *.translation
 
