Converted projected into DLL

--- a/2D-Implementation/2D-Implementation/2D-Implementation.csproj
+++ b/2D-Implementation/2D-Implementation/2D-Implementation.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="Raylib-cs" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="PSDSystemLibrary">
+      <HintPath>PSDSystemLibrary.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
