--- a/PSDSystemLibrary/PSDSystemLibrary/PSDSystemLibrary.csproj
+++ b/PSDSystemLibrary/PSDSystemLibrary/PSDSystemLibrary.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>PSD</RootNamespace>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -13,6 +14,13 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>embedded</DebugType>
+    <DefineConstants>$(DefineConstants);USING_GODOT</DefineConstants>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Godot.SourceGenerators" Version="4.2.2" />
+    <PackageReference Include="GodotSharp" Version="4.2.2" />
+    <PackageReference Include="GodotSharpEditor" Version="4.2.2" />
+  </ItemGroup>
 
 </Project>
