--- a/Godot Projects/game1/Properties/launchSettings.json
+++ b/Godot Projects/game1/Properties/launchSettings.json
@@ -5,7 +5,7 @@
     },
     "Profile 1": {
       "commandName": "Executable",
-      "executablePath": "C:\\Users\\Addition\\Desktop\\Godot\\Godot_v4.2.1-stable_mono_win64\\Godot_v4.2.1-stable_mono_win64.exe",
+      "executablePath": "C:\\Users\\Addition\\Desktop\\Godot\\Godot_v4.2.2-stable_mono_win64\\Godot_v4.2.2-stable_mono_win64_console.exe",
       "commandLineArgs": "--path . --verbose",
       "workingDirectory": ".",
       "nativeDebugging": true
